# MtA-using-COT

./: CMakeLists.txt  README.md  output-example.txt
src/: main.c
